# Auto-tracking-app

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
myenv/: pyvenv.cfg
